--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.33.3",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
     "react": "18.0.0",
