--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^1.33.3",
     "bootstrap": "^5.1.3",
     "next": "12.1.4",
+    "nextjs-google-analytics": "^2.1.0",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
